# haku

./: .gitignore  README.md  etf-standard-deviations.csv  etfs-profiles copy.json  etfs-profiles.json  fondos-mutuos-cleaning.ipynb  fondos-mutuos-cleaning.py  fondos-mutuos-consolidado.json  fondos-mutuos-data.json  fondos-mutuos-todo.csv  ishares-core-sp500-monthly-adjusted-values.json  ishares-core-sp500-monthly-values.json  ishares-core-sp500.json  macro_outlook_report.txt  playground.js  pyproject.toml  ten-monthly-values-final.json  twenty-monthly-values-final copy.json
haku-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
haku-app/src/: About.css  About.tsx  (+33 more)
haku-data/: fondos-mutuos-cleaning-2.ipynb  fondos-mutuos-cleaning-2.py  fondos-mutuos-cleaning-3.ipynb  fondos-mutuos-cleaning-3.py  fondos-mutuos-cleaning-4.py  fondos-mutuos-cleaning.ipynb  fondos-mutuos-cleaning.py  fondos-mutuos-consolidado.json  fondos-mutuos-copy.json  fondos-mutuos-data-2.json  fondos-mutuos-data-3.json  fondos-mutuos-data.json  fondos-mutuos-table-1.csv  fondos-mutuos-table-2.csv  fondos-mutuos-table-3.csv  fondos-mutuos-table-4.csv  fondos-mutuos-table.csv  fondos-mutuos-whole.json
seo_crew/: README.md  ed_blog_multi.txt  ed_content_crew.py  ed_content_multiagent_crew.py  etf-quarterly-report.py  finance_newsletter_crew.py  macro_outlook_crew.py  mutual-fund-quarterly-report.py  pyproject.toml
seo_crew/seo_reports/: ed_blog.txt  macro_outlook_report.txt  mutual_fund_quarterly_report.txt  quarterly_report.txt
(+277 files in other folders)
