[tool.poetry]
name = "seo-crew"
version = "0.1.0"
description = "seo content crew developed with crewai"
authors = ["Andean Ronin <marianonc98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.76.0"
crewai-tools = "^0.13.2"
openai = "^1.52.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
